@@ -65,7 +65,7 @@
          }
       }
    },
-   "release_status" : "testing",
+   "release_status" : "stable",
    "resources" : {
       "bugtracker" : {
          "web" : "https://github.com/LibreCat/WWW-ORCID/issues"
@@ -77,7 +77,7 @@
          "web" : "https://github.com/LibreCat/WWW-ORCID"
       }
    },
-   "version" : "0.03_03",
+   "version" : "0.0201",
    "x_contributors" : [
       "jjatria <jjatria@gmail.com>",
       "Mohammad S Anwar <mohammad.anwar@yahoo.com>",
