@@ -1,6 +1,7 @@
 Revision history for WWW-ORCID
 
 {{$NEXT}}
+  - document client status
 
 0.03_03  2017-08-11 16:08:43 CEST
   - record_url helper method
